syntax = "proto3";
package com.service.grpc;

option optimize_for = SPEED;

message Request {
  string fromSender = 1;
  string toReceiver = 2;
  string originalSender = 3;

  oneof payload {
    PingRequest ping = 6;
    PutRequest putRequest = 7;
    GetRequest getRequest = 8;
  }

}

message Response {
  bool isSuccess = 1; // PingRequest will only use this field if succeeded
  string msg = 2;
  MetaData metaData = 3;
  DatFragment datFragment = 4;
}

message PingRequest {
  string msg = 1; // optional
}

message PutRequest {
  MetaData metaData = 1;
  DatFragment datFragment = 2;
}

message GetRequest {
  MetaData metaData = 1;
  QueryParams queryParams = 2;
}

message QueryParams {
  string from_utc = 1;
  string to_utc = 2;
}

message MetaData {
  string uuid = 1;
  int32 numOfFragment = 2;
  int32 mediaType = 3;
}

message DatFragment {
  bytes data = 1;
}

service CommunicationService {
  rpc MessageHandler(Request) returns (Response);
}